--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -1,43 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Work Cited</title>
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lumen/bootstrap.min.css" integrity="sha384-GzaBcW6yPIfhF+6VpKMjxbTx6tvR/yRd/yJub90CqoIn2Tz4rRXlSpTFYMKHCifX" crossorigin="anonymous">
+    <title>Work Cited Sources</title>
+      <!-- CSS -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+      <link href="https://bootswatch.com/5/slate/bootstrap.min.css", rel="stylesheet">
+      <link href="./static/css/static.css" rel="stylesheet">
+      
+     <!-- BACKGROUND IMAGE, CHAT GBT-->
+     <style>
+         body {
+                background-image: url('static/images/light_grey_lines_background.jpg');
+                background-size: 25%;
+                background-repeat: repeat;
+                background-attachment: fixed;
+                background-position: center;
+                color: #f8f9fa; /* Light color for all text */
+              }
+    </style>
 </head>
+      
 <body>
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="home.html">Home</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarColor03">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="Home.html">Home</a>
-                      </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Machine_learning.html">Machine Learning</a>
-                    </li>
-                     <li class="nav-item"></li>
-                        <a class="nav-link" href="tableau.html">Tableau</a>
-                     </li>
-                     <li class="nav-item"></li>
-                        <a class="nav-link" href="report.html">Report</a>
-                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about_us.html">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="links.html">Work Cited</a>
-                    </li>
-                </ul>
-            </div>
+            <a class="navbar-brand" href="/"><img src="static/images/logo.jpg" onerror="this.onerror=null; this.remove()"  width="45", height="30"></a>
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a 
+                        class="nav-link" href="/">Home
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a 
+                        class="nav-link" href="/machine_learning.html">Machine_learning
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a 
+                      class="nav-link" href="/tableau1.html">Tableau1
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a 
+                        class="nav-link" href="/tableau2.html">Tableau2
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a 
+                        class="nav-link active" href="about_us.html">About Us
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a 
+                        class="nav-link" href="links.html">Work Cited
+                    </a>
+                </li>
+            </ul>
         </div>
     </nav>
     <div class="container text-center">
@@ -46,7 +65,7 @@
         <h1>Work Cited Sources</h1>
         <div class="row">
             <div class="col-md-12">
-                <ul>
+                <ul style="list-style-type: none; padding: 0;">
                     <li><a href="https://www.nhtsa.gov/laws-regulations/standing-general-order-crash-reporting#data" target="_blank">NHTSA Standing General Order on Crash Reporting Dataset Source</a></li>
                     <li><a href="https://www.frontiersin.org/journals/built-environment/articles/10.3389/fbuil.2022.860805/full" target="_blank">Image and Information Source</a></li>
                 </ul>
