--- a/app/templates/about_us.html
+++ b/app/templates/about_us.html
@@ -24,26 +24,17 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/"><img src="static/images/logo.jpg" onerror="this.onerror=null; this.remove()"  width="45", height="30"></a>
+            <a class="navbar-brand" href="/"><img src="static/images/louisiana_marsh_fire_superfog.avif" height="60px" alt="Logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>  
             <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="/machine_learning.html">Machine_learning</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="/tableau1.html">Tableau1</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="/tableau2.html">Tableau2</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link active" href="about_us.html">About Us</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="links.html">Work Cited</a>
-                </li>
+                <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="machine_learning.html">Machine Learning</a></li>
+                <li class="nav-item"><a class="nav-link" href="tableau1.html">Tableau1</a></li>
+                <li class="nav-item"><a class="nav-link" href="tableau2.html">Tableau2</a></li>
+                <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="links.html">Work Cited</a></li>
             </ul>
         </div>
     </nav>
