initial app.py with 3 HTML pages working

--- a/app/templates/works_cited.html
+++ b/app/templates/works_cited.html
@@ -10,7 +10,6 @@
      <!-- BACKGROUND IMAGE, CHAT GBT-->
      <style>
          body {
-                background-image: url('static/images/light_grey_lines_background.jpg');
                 background-size: 25%;
                 background-repeat: repeat;
                 background-attachment: fixed;
@@ -29,12 +28,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>  
             <ul class="navbar-nav me-auto">
-                <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="machine_learning.html">Machine Learning</a></li>
-                <li class="nav-item"><a class="nav-link" href="tableau1.html">Tableau1</a></li>
-                <li class="nav-item"><a class="nav-link" href="tableau2.html">Tableau2</a></li>
-                <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
-                <li class="nav-item"><a class="nav-link" href="links.html">Work Cited</a></li>
+                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="/machine_learning">Machine Learning</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tableau1">Tableau1</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tableau2">Tableau2</a></li>
+                <li class="nav-item"><a class="nav-link" href="/about_us">About Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="/works_cited">Work Cited</a></li>
             </ul>
         </div>
     </nav>
