--- a/app/static/css/static.css
+++ b/app/static/css/static.css
@@ -20,9 +20,10 @@
     text-align: left;
     margin-bottom: 20px;
     padding: 20px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.8); /* Light background with some transparency */
     border: 1px solid #ddd;
     border-radius: 5px;
+    color: #333;
   }
 
 .large-image 
