--- a/app/templates/about_us.html
+++ b/app/templates/about_us.html
@@ -10,7 +10,6 @@
     <!-- BACKGROUND IMAGE, CHAT GBT-->
     <style>
         body {
-            background-image: url('static/images/light_grey_lines_background.jpg');
             background-size: 25%;
             background-repeat: repeat;
             background-attachment: fixed;
@@ -29,12 +28,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>  
             <ul class="navbar-nav me-auto">
-                <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="machine_learning.html">Machine Learning</a></li>
-                <li class="nav-item"><a class="nav-link" href="tableau1.html">Tableau1</a></li>
-                <li class="nav-item"><a class="nav-link" href="tableau2.html">Tableau2</a></li>
-                <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
-                <li class="nav-item"><a class="nav-link" href="links.html">Work Cited</a></li>
+                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="/machine_learning">Machine Learning</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tableau1">Tableau1</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tableau2">Tableau2</a></li>
+                <li class="nav-item"><a class="nav-link" href="/about_us">About Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="/works_cited">Work Cited</a></li>
             </ul>
         </div>
     </nav>
@@ -51,7 +50,7 @@
         <div class="row">
             <div class="col-md-6 member">
                 <h2>
-                    <a href="https://www.linkedin.com/in/paris-lee-5b93491a2/?trk+contact-info" target="_blank" style="text-decoration: underline;">Paris</a>
+                    <a href="https://www.linkedin.com/in/paris-lee-5b93491a2/?trk+contact-info" target="_blank" style="text-decoration: underline; color: #333; font-weight: bold;">Paris</a>
                 </h2> 
                 <img src="../static/images/Paris.jpg" alt="Team Member 1" class="img-fluid" style="max-width: 50px; height: auto;">
                 <p>
@@ -66,7 +65,7 @@
 
             <div class="col-md-6 member">
                 <h2>
-                    <a href="https://github.com/KevinPCarney" target="_blank" style="text-decoration: underline;">Kevin</a>
+                    <a href="https://github.com/KevinPCarney" target="_blank" style="text-decoration: underline; color: #333; font-weight: bold;">Kevin</a>
                 </h2> 
                 <img src="../static/images/Kevin.jpg" alt="Team Member 1" class="img-fluid" style="max-width: 50px; height: auto;">
                 <p>
@@ -78,7 +77,7 @@
 
             <div class="col-md-6 member">
                 <h2>
-                    <a href="https://www.linkedin.com/in/joyceweishan" target="_blank" style="text-decoration: underline;">Joy</a>
+                    <a href="https://www.linkedin.com/in/joyceweishan" target="_blank" style="text-decoration: underline; color: #333; font-weight: bold;">Joy</a>
                 </h2> 
                 <img src="../static/images/Joy.jpg" alt="Team Member 1" class="img-fluid" style="max-width: 50px; height: auto;">
                 <p>
@@ -93,7 +92,7 @@
 
             <div class="col-md-6 member">
                 <h2>
-                    <a href="www.linkedin.com/in/samantha-schutz-aa674b164" target="_blank" style="text-decoration: underline;">Samantha</a>
+                    <a href="www.linkedin.com/in/samantha-schutz-aa674b164" target="_blank" style="text-decoration: underline; color: #333; font-weight: bold;">Samantha</a>
                 </h2> 
                 <img src="../static/images/Samantha.jpg" alt="Team Member 1" class="img-fluid" style="max-width: 50px; height: auto;">
                 <p>
