--- a/app/templates/works_cited.html
+++ b/app/templates/works_cited.html
@@ -30,8 +30,8 @@
             <ul class="navbar-nav me-auto">
                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="/machine_learning">Machine Learning</a></li>
-                <li class="nav-item"><a class="nav-link" href="/tableau1">Tableau1</a></li>
-                <li class="nav-item"><a class="nav-link" href="/tableau2">Tableau2</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tableau1">Model Year/Seat Belt/Accident Frequency</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tableau2">Speed and Roadway Type</a></li>
                 <li class="nav-item"><a class="nav-link" href="/about_us">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="/works_cited">Work Cited</a></li>
             </ul>
