--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -36,6 +36,7 @@
                 <li class="nav-item"><a class="nav-link" href="/machine_learning">Machine Learning</a></li>
                 <li class="nav-item"><a class="nav-link" href="/tableau1">Model Year/Seat Belt/Accident Frequency</a></li>
                 <li class="nav-item"><a class="nav-link" href="/tableau2">Speed and Roadway Type</a></li>
+                <li class="nav-item"><a class="nav-link" href="/report">Report</a></li>
                 <li class="nav-item"><a class="nav-link" href="/about_us">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="/works_cited">Work Cited</a></li>
             </ul>
