--- a/app/templates/tableau2.html
+++ b/app/templates/tableau2.html
@@ -29,7 +29,7 @@
                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="/machine_learning">Machine Learning</a></li>
                 <li class="nav-item"><a class="nav-link" href="/tableau1">Model Year/Seat Belt/Accident Frequency</a></li>
-                <li class="nav-item"><a class="nav-link" href="/tableau2">Speed and Roadway Type</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tableau2">External Environmental Factors</a></li>
                 <li class="nav-item"><a class="nav-link" href="/report">Report</a></li>
                 <li class="nav-item"><a class="nav-link" href="/about_us">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="/works_cited">Work Cited</a></li>
@@ -39,14 +39,13 @@
   <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h1>Speed and Roadway Type</h1>
+                <h1>External Environmental Factors</h1>
 
                 </div>
             </div>
         </div>
         <hr>
-        <div class='tableauPlaceholder' id='viz1711416866201' style='position: relative'><noscript><a href='#'><img alt=' ' src='https://public.tableau.com/shared/42JGZ9JWC?:display_count=n&:origin=viz_share_link' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https://public.tableau.com/shared/42JGZ9JWC?:display_count=n&:origin=viz_share_link' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Project4-CreditCardLoans11&#47;CCStory' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https://public.tableau.com/shared/42JGZ9JWC?:display_count=n&:origin=viz_share_link' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1711416866201');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>        </div>
-
+        <div class='tableauPlaceholder' id='viz1711416866201' style='position: relative'><noscript><a href='#'><img alt=' ' src='https://public.tableau.com/views/Project_4_Group_5_17273927021440/Dashboard1?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https://public.tableau.com/views/Project_4_Group_5_17273927021440/Dashboard1?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Project4-CreditCardLoans11&#47;CCStory' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https://public.tableau.com/views/Project_4_Group_5_17273927021440/Dashboard1?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1711416866201');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>        </div>
     </div>
 
   </body>
