--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -52,7 +52,7 @@
             <hr>
             <div class="col-md-12 text-center">
                 <a class="navbar-brand" href="/">
-                    <img src="../static/images/autonomous_vehicle.jpg" onerror="this.onerror=null; this.remove()" width="200" height="180" alt="Autonomous Vehicle">
+                    <img src="../static/images/autonomous_vehicle.jpg" onerror="this.onerror=null; this.remove()" width="120" height="90" alt="Autonomous Vehicle">
                 </a>
             </div>
             <br>
@@ -60,27 +60,60 @@
             <br>
             <div class="row">
                 <div class="col-md-6">
-                    <p>According to the Essurance Study, 77% of Drivers in the United States have been in at least one car accident in their lives and that number is rising. In 2022, road crashes resulted in 38,000 people losing their lives each year and is the leading cause of death in the country.</p>
+                    <p>June 2021: The National Highway Traffic and Safety Administration (NHTSA) issues a standing Order
+                       for manufacturers to report certain crashes of vehicles which had automated driving systems. 
+                       or Level 2 advance driver assistance systems. NHSTA was interested in possible safety concerns for
+                       vehicles equipped with automated systems and in order for NHTSA to respond quickly to any safety defects.
+                       NHTSA main concern was to immediately remove vehicles from the roadway which had any safety issues.
+                    </p>
+                    <p>
+                       April 2023: Latest Updates to the general order were posted for manufacturers as NHTSA continues to evaluate
+                       Automated Systems in vehicles. According to the Essurance Study, 77% of Drivers in the United States have been in 
+                       at least one car accident in their lives and that number is rising. 
+                       In 2022, road crashes resulted in 38,000 people losing their lives each year and is the leading cause of death 
+                       in the country.  These factors as well are taken into consideration while review ADS safety.
+                    </p>
                 </div>
-                <div class="col-md-6 text-center">
-                    <img src="../static/images/fatal.jpg" alt="Fatal Car Crash" class="img-fluid">
+                <div class="col-md-4 text-center">
+                    <img src="../static/images/fatal.jpg" alt="Fatal Car Crash" class="img-fluid large-image">
                 </div>
             </div>
-            <br>
             <div class="row">
                 <div class="col-md-6 text-center">
-                    <img src="../static/images/ADS.jpg" alt="Automated Driving System" class="img-fluid">
+                    <img src="../static/images/ADS.jpg" alt="Automated Driving System" class="img-fluid medium-image">
                 </div>
                 <div class="col-md-6">
-                    <p>NHTSA created a Standing Order so that all crashes using Automated Driving Systems were reported. The first remote-piloted cars were debuted by General Motors at the 1939 Worlds Fair. This eventually led to the first autonomous (self-driving) car prototypes in the 1980s after 30 years of testing.</p>
+                    <p>The first remote-piloted cars were debuted by General Motors at the 1939 Worlds Fair. 
+                        This eventually led to the first autonomous (self-driving) car prototypes in the 1980s 
+                        after 30 years of testing.  Automated driving systems are still being developed and improved.
+                        Currently in it's mature state, the aim is to perform the entire dynamic driving task on a sustained
+                        basis without driver involvement.  These vehicles are being tested on public roads in limited capacities and 
+                        currently not available for consumer purchase.  Some systems, level 2 advanced driver systems are available. These systems do require driver engagement.
+                    </p>
                 </div>
             </div>
-            <br>
-            <div class="text-center">
-                <h4>BLAH BLAH BLAH</h4>
-                <img src="../static/images/mercedes.jpg" alt="Automated Driving System" class="col-md-3">
+            <div class="text-left">
+                <p>The data collected is for crashes where automated data systems were in use and active within
+                    thirty seconds of the crash.  For any level 2 ADS systems data must be reported if the system was in 
+                    use within 30 seconds of the crash and te crash resulted in a fatality, tow-away, air-bag deployment 
+                    and/or any individual transport for medical care.
+                </p>
+                <p>
+                    LIMITATIONS:  Crash data varies by manufacturers and the types of automation systems.  While data 
+                    is very detailed and can be reported quickly as these systems are very advanced, the data is not 
+                    standardized across manufacturers. Remote transmission capabilities vary also by manufacturer.  
+                    Data reporting is also difficult as these vehicles are privately owned and reporting is based upon
+                    owner reporting.  Reporting is completed when the manufacturer is notified not at the time of the crash.
+                    Reporting is mandatory upon notification.  Initial reporting data may be incomplete as reporting at times
+                    occurs prior to data verification.  Updated verification data is manddatory reported and therefore, does
+                    improve data collection.  PII data is respected and therefore limits what is reported.  The same crash can
+                    have multiple reports as there are multiple entities covered under mandatory reporting.  Therefore, the number of
+                    reports does not equal the number of accidents or incidents.
+                </p>
+                <div class="text-left d-flex justify-content-center">
+                    <img src="../static/images/mercedes.jpg" alt="Automated Driving System" class="col-md-3">
+                </div>
             </div>
-            <br>
         </div>
     </div>
 
