--- a/app/templates/machine_learning.html
+++ b/app/templates/machine_learning.html
@@ -50,7 +50,11 @@
         <img src="static/images/autonomous_vehicle.jpg" alt="Autonomous Vehicle" width="200">
         <div class="container">
           <div class="crash border-primary mb-3">
-            <div class="crash-header">Enter your demographics to check whether you would be considered high or low risk.</div>
+            <br>
+            <br>
+            <div class="crash-header">Enter your demographics to determine prediction risk of injury while using an automated driving system vehicle.</div>
+            <br>
+            <br>
             <div class="crash-body">
                 <div class="row">
                         <div class="form-group col-md-3">
